# agent-hallucination-guard

./: README.md  README_CN.md  pyproject.toml  requirements.txt
benchmarks/: run_hallucination_eval.py
benchmarks/dataset/: complex_causal.jsonl  counterfactual.jsonl  simple_causal.jsonl
configs/: server_diagnosis.json
examples/: server_diagnosis_demo.py
src/: __init__.py
src/agent/: __init__.py  guarded_agent.py
src/causal/: __init__.py  builder.py  causal_reasoner.py  scm.py
src/guardrails/: __init__.py  feedback_loop.py  input_guard.py  output_guard.py
src/memory/: __init__.py  short_term.py
tests/: test_causal_reasoner.py  test_guarded_agent.py  test_input_guard.py
